--- a/quiz-backend/package.json
+++ b/quiz-backend/package.json
@@ -30,8 +30,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.8",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/throttler": "^6.2.1",
+    "@nestjs/websockets": "^10.4.8",
     "bcrypt": "^5.1.0",
     "bullmq": "^5.25.3",
     "cache-manager": "^5.7.6",
@@ -42,7 +44,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.32.1",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
