--- a/quiz-ui/package.json
+++ b/quiz-ui/package.json
@@ -15,6 +15,7 @@
     "next": "15.0.3",
     "react": "18",
     "react-dom": "18",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
